--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibGit2Sharp" version="0.22.0-pre20150716071016" targetFramework="net45" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.72" targetFramework="net45" />
   <package id="Perspex" version="9999.0.478-nightly" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
