--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Perspex" version="9999.0.584-nightly" targetFramework="net45" />
+  <package id="LibGit2Sharp" version="0.22.0-pre20151003111314" targetFramework="net45" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.86" targetFramework="net45" />
+  <package id="Perspex" version="9999.0.590-nightly" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
