--- a/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Definition.cs" />
+    <Compile Include="ExportableProperty.cs" />
+    <Compile Include="Include.cs" />
     <Compile Include="StandardProjectFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IStandardProject.cs" />
