--- a/AvalonStudio/AvalonStudio.Toolchains.Standard/AvalonStudio.Toolchains.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.Standard/AvalonStudio.Toolchains.Standard.csproj
@@ -153,7 +153,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetPath) ..\..\..\AvalonStudio\bin\Debug\Plugins\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
