--- a/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
@@ -114,8 +114,10 @@
     <Compile Include="ClangFormat.cs" />
     <Compile Include="ClangFormatSettings.cs" />
     <Compile Include="CPlusPlusLanguageService.cs" />
+    <Compile Include="CppIndentationStrategy.cs" />
     <Compile Include="DefineTextLineTransformer.cs" />
     <Compile Include="IncludeTextLineTransformer.cs" />
+    <Compile Include="IndentationReformatter.cs" />
     <Compile Include="PragmaMarkTextLineTransformer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticLibraryTemplate.cs" />
